cmake_minimum_required(VERSION 3.3)
project(time_bomb)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    S3C2440/include/2440addr.h
    S3C2440/include/2440lib.h
    S3C2440/include/2440slib.h
    S3C2440/include/config.h
    S3C2440/include/Def1.h
    S3C2440/include/mmu.h
    S3C2440/include/N35_lcd.h
    S3C2440/include/Nand.h
    S3C2440/include/Option.h
    S3C2440/include/Printf.h
    S3C2440/include/Target.h
    S3C2440/include/Timer.h
    S3C2440/source/2440lib.c
    S3C2440/source/Font_Libs.c
    S3C2440/source/main.c
    S3C2440/source/mmu.c
    S3C2440/source/N35_lcd.c
    S3C2440/source/nand.c
    S3C2440/source/Printf.c
    S3C2440/source/Target.c
    S3C2440/source/task.h
    S3C2440/source/Timer.c
    uC_GUI/Config/GUIConf.h
    uC_GUI/Config/GUITouchConf.h
    uC_GUI/Config/LCDConf.h
    uC_GUI/GUI/AntiAlias/GUIAAArc.c
    uC_GUI/GUI/AntiAlias/GUIAAChar.c
    uC_GUI/GUI/AntiAlias/GUIAAChar2.c
    uC_GUI/GUI/AntiAlias/GUIAAChar4.c
    uC_GUI/GUI/AntiAlias/GUIAACircle.c
    uC_GUI/GUI/AntiAlias/GUIAALib.c
    uC_GUI/GUI/AntiAlias/GUIAALine.c
    uC_GUI/GUI/AntiAlias/GUIAAPoly.c
    uC_GUI/GUI/AntiAlias/GUIAAPolyOut.c
    uC_GUI/GUI/ConvertColor/LCDP111.c
    uC_GUI/GUI/ConvertColor/LCDP222.c
    uC_GUI/GUI/ConvertColor/LCDP233.c
    uC_GUI/GUI/ConvertColor/LCDP323.c
    uC_GUI/GUI/ConvertColor/LCDP332.c
    uC_GUI/GUI/ConvertColor/LCDP444.c
    uC_GUI/GUI/ConvertColor/LCDP555.c
    uC_GUI/GUI/ConvertColor/LCDP565.c
    uC_GUI/GUI/ConvertColor/LCDP8666.c
    uC_GUI/GUI/ConvertColor/LCDPM233.c
    uC_GUI/GUI/ConvertColor/LCDPM323.c
    uC_GUI/GUI/ConvertColor/LCDPM332.c
    uC_GUI/GUI/ConvertColor/LCDPM555.c
    uC_GUI/GUI/ConvertColor/LCDPM565.c
    uC_GUI/GUI/ConvertMono/LCDP0.c
    uC_GUI/GUI/ConvertMono/LCDP1.c
    uC_GUI/GUI/ConvertMono/LCDP2.c
    uC_GUI/GUI/ConvertMono/LCDP4.c
    uC_GUI/GUI/Core/Gui.h
    uC_GUI/GUI/Core/gui2dlib.c
    uC_GUI/GUI/Core/GUI__AddSpaceHex.c
    uC_GUI/GUI/Core/GUI__DivideRound.c
    uC_GUI/GUI/Core/GUI__GetFontSizeY.c
    uC_GUI/GUI/Core/GUI__HandleEOLine.c
    uC_GUI/GUI/Core/GUI__IntersectRect.c
    uC_GUI/GUI/Core/GUI__IntersectRects.c
    uC_GUI/GUI/Core/GUI__ReduceRect.c
    uC_GUI/GUI/Core/GUI_AddBin.c
    uC_GUI/GUI/Core/GUI_AddDec.c
    uC_GUI/GUI/Core/GUI_AddHex.c
    uC_GUI/GUI/Core/GUI_Color2VisColor.c
    uC_GUI/GUI/Core/GUI_DispBin.c
    uC_GUI/GUI/Core/GUI_DispCEOL.c
    uC_GUI/GUI/Core/GUI_DispChar.c
    uC_GUI/GUI/Core/GUI_DispChars.c
    uC_GUI/GUI/Core/GUI_DispHex.c
    uC_GUI/GUI/Core/GUI_DispStringAt.c
    uC_GUI/GUI/Core/GUI_DispStringAtCEOL.c
    uC_GUI/GUI/Core/GUI_DispStringHCenter.c
    uC_GUI/GUI/Core/GUI_DispStringInRect.c
    uC_GUI/GUI/Core/GUI_DispStringLen.c
    uC_GUI/GUI/Core/GUI_DrawBitmap.c
    uC_GUI/GUI/Core/GUI_DrawBitmapExp.c
    uC_GUI/GUI/Core/GUI_DrawBitmapMag.c
    uC_GUI/GUI/Core/GUI_DrawFocusRect.c
    uC_GUI/GUI/Core/GUI_DrawGraph.c
    uC_GUI/GUI/Core/GUI_DrawHLine.c
    uC_GUI/GUI/Core/GUI_DrawPie.c
    uC_GUI/GUI/Core/GUI_DrawPixel.c
    uC_GUI/GUI/Core/GUI_DrawPolyline.c
    uC_GUI/GUI/Core/GUI_DrawRectEx.c
    uC_GUI/GUI/Core/GUI_DrawVLine.c
    uC_GUI/GUI/Core/GUI_ErrorOut.c
    uC_GUI/GUI/Core/GUI_Exec.c
    uC_GUI/GUI/Core/GUI_FillPolygon.c
    uC_GUI/GUI/Core/GUI_FillRect.c
    uC_GUI/GUI/Core/GUI_FillRectEx.c
    uC_GUI/GUI/Core/GUI_GetClientRect.c
    uC_GUI/GUI/Core/GUI_GetColor.c
    uC_GUI/GUI/Core/GUI_GetDispPos.c
    uC_GUI/GUI/Core/GUI_GetFont.c
    uC_GUI/GUI/Core/GUI_GetFontInfo.c
    uC_GUI/GUI/Core/GUI_GetFontSizeY.c
    uC_GUI/GUI/Core/GUI_GetLineStyle.c
    uC_GUI/GUI/Core/GUI_GetStringDistX.c
    uC_GUI/GUI/Core/GUI_GetTextAlign.c
    uC_GUI/GUI/Core/GUI_GetTextExtend.c
    uC_GUI/GUI/Core/GUI_GetTextMode.c
    uC_GUI/GUI/Core/GUI_GetVersionString.c
    uC_GUI/GUI/Core/GUI_GetYSizeOfFont.c
    uC_GUI/GUI/Core/GUI_InitLUT.c
    uC_GUI/GUI/Core/GUI_InvertRect.c
    uC_GUI/GUI/Core/GUI_IsInFont.c
    uC_GUI/GUI/Core/GUI_Log.c
    uC_GUI/GUI/Core/GUI_MergeRect.c
    uC_GUI/GUI/Core/GUI_MOUSE.c
    uC_GUI/GUI/Core/GUI_MouseArrow.c
    uC_GUI/GUI/Core/GUI_MouseNoDrop.c
    uC_GUI/GUI/Core/GUI_MoveRect.c
    uC_GUI/GUI/Core/GUI_OnKey.c
    uC_GUI/GUI/Core/GUI_Pen.c
    uC_GUI/GUI/Core/GUI_Private.h
    uC_GUI/GUI/Core/GUI_Protected.h
    uC_GUI/GUI/Core/GUI_RectsIntersect.c
    uC_GUI/GUI/Core/GUI_SaveContext.c
    uC_GUI/GUI/Core/GUI_SelLCD.c
    uC_GUI/GUI/Core/GUI_SetColor.c
    uC_GUI/GUI/Core/GUI_SetColorIndex.c
    uC_GUI/GUI/Core/GUI_SetDecChar.c
    uC_GUI/GUI/Core/GUI_SetDefault.c
    uC_GUI/GUI/Core/GUI_SetDrawMode.c
    uC_GUI/GUI/Core/GUI_SetFont.c
    uC_GUI/GUI/Core/GUI_SetLBorder.c
    uC_GUI/GUI/Core/GUI_SetLineStyle.c
    uC_GUI/GUI/Core/GUI_SetLUTEntry.c
    uC_GUI/GUI/Core/GUI_SetOrg.c
    uC_GUI/GUI/Core/GUI_SetPhysColor.c
    uC_GUI/GUI/Core/GUI_SetPixelIndex.c
    uC_GUI/GUI/Core/GUI_SetTextAlign.c
    uC_GUI/GUI/Core/GUI_SetTextMode.c
    uC_GUI/GUI/Core/GUI_StreamBMP.c
    uC_GUI/GUI/Core/GUI_TOUCH.c
    uC_GUI/GUI/Core/GUI_WaitKey.c
    uC_GUI/GUI/Core/GUI_Warn.c
    uC_GUI/GUI/Core/GUI_X.h
    uC_GUI/GUI/Core/GUIAlloc.c
    uC_GUI/GUI/Core/guiarc.c
    uC_GUI/GUI/Core/GUIChar.c
    uC_GUI/GUI/Core/GUIChar0.c
    uC_GUI/GUI/Core/GUICharM.c
    uC_GUI/GUI/Core/GUICharP.c
    uC_GUI/GUI/Core/GUICirc.c
    uC_GUI/GUI/Core/GUIColor2Index.c
    uC_GUI/GUI/Core/GUICore.c
    uC_GUI/GUI/Core/GUICurs.c
    uC_GUI/GUI/Core/guidebug.h
    uC_GUI/GUI/Core/GUIEncJS.c
    uC_GUI/GUI/Core/GUIIndex2Color.c
    uC_GUI/GUI/Core/GUIPolyE.c
    uC_GUI/GUI/Core/GUIPolyM.c
    uC_GUI/GUI/Core/GUIPolyR.c
    uC_GUI/GUI/Core/GUIStream.c
    uC_GUI/GUI/Core/guitask.c
    uC_GUI/GUI/Core/GUITime.c
    uC_GUI/GUI/Core/guitimer.c
    uC_GUI/GUI/Core/GUITYPE.H
    uC_GUI/GUI/Core/GUIUC0.c
    uC_GUI/GUI/Core/GUIUC1.c
    uC_GUI/GUI/Core/GUIVal.c
    uC_GUI/GUI/Core/GUIValf.c
    uC_GUI/GUI/Core/LCD.c
    uC_GUI/GUI/Core/LCD.H
    uC_GUI/GUI/Core/LCD_ConfDefaults.h
    uC_GUI/GUI/Core/LCD_DrawVLine.c
    uC_GUI/GUI/Core/LCD_GetColorIndex.c
    uC_GUI/GUI/Core/LCD_GetNumDisplays.c
    uC_GUI/GUI/Core/LCD_GetPixelColor.c
    uC_GUI/GUI/Core/LCD_L0_Generic.c
    uC_GUI/GUI/Core/LCD_Private.h
    uC_GUI/GUI/Core/LCD_Protected.h
    uC_GUI/GUI/Core/LCD_SetClipRectEx.c
    uC_GUI/GUI/Core/LCDAA.c
    uC_GUI/GUI/Core/LCDColor.c
    uC_GUI/GUI/Core/LCDGetP.c
    uC_GUI/GUI/Core/LCDInfo.c
    uC_GUI/GUI/Core/LCDInfo0.c
    uC_GUI/GUI/Core/LCDInfo1.c
    uC_GUI/GUI/Core/LCDL0Mag.c
    uC_GUI/GUI/Core/LCDRLE4.c
    uC_GUI/GUI/Core/LCDRLE8.c
    uC_GUI/GUI/Core/LCDSIM.H
    uC_GUI/GUI/Font/F08_1.c
    uC_GUI/GUI/Font/F08_ASCII.c
    uC_GUI/GUI/Font/F10_1.c
    uC_GUI/GUI/Font/F10_ASCII.c
    uC_GUI/GUI/Font/F10S_1.c
    uC_GUI/GUI/Font/F10S_ASCII.c
    uC_GUI/GUI/Font/F13_1.c
    uC_GUI/GUI/Font/F13_ASCII.c
    uC_GUI/GUI/Font/F13B_1.c
    uC_GUI/GUI/Font/F13B_ASCII.c
    uC_GUI/GUI/Font/F13H_1.c
    uC_GUI/GUI/Font/F13H_ASCII.c
    uC_GUI/GUI/Font/F13HB_1.c
    uC_GUI/GUI/Font/F13HB_ASCII.c
    uC_GUI/GUI/Font/F16_1.c
    uC_GUI/GUI/Font/F16_1HK.c
    uC_GUI/GUI/Font/F16_ASCII.c
    uC_GUI/GUI/Font/F16_HK.c
    uC_GUI/GUI/Font/F16B_1.c
    uC_GUI/GUI/Font/F16B_ASCII.c
    uC_GUI/GUI/Font/F24_1.c
    uC_GUI/GUI/Font/F24_ASCII.c
    uC_GUI/GUI/Font/F24B_1.c
    uC_GUI/GUI/Font/F24B_ASCII.c
    uC_GUI/GUI/Font/F32_1.c
    uC_GUI/GUI/Font/F32_ASCII.c
    uC_GUI/GUI/Font/F32B_1.c
    uC_GUI/GUI/Font/F32B_ASCII.c
    uC_GUI/GUI/Font/F4x6.c
    uC_GUI/GUI/Font/F6x8.C
    uC_GUI/GUI/Font/F8x10_ASCII.c
    uC_GUI/GUI/Font/F8x12_ASCII.c
    uC_GUI/GUI/Font/F8x13.c
    uC_GUI/GUI/Font/F8x13_1.c
    uC_GUI/GUI/Font/F8x13_ASCII.c
    uC_GUI/GUI/Font/F8x15B.c
    uC_GUI/GUI/Font/F8x15B_1.c
    uC_GUI/GUI/Font/F8x15B_ASCII.c
    uC_GUI/GUI/Font/F8x16.c
    uC_GUI/GUI/Font/F8x8.c
    uC_GUI/GUI/Font/FComic18B_1.c
    uC_GUI/GUI/Font/FComic18B_ASCII.c
    uC_GUI/GUI/Font/FComic24B_1.c
    uC_GUI/GUI/Font/FComic24B_ASCII.c
    uC_GUI/GUI/Font/FD24x32.c
    uC_GUI/GUI/Font/FD32.c
    uC_GUI/GUI/Font/hzk12.c
    uC_GUI/GUI/LCDDriver/LCDWin.c
    uC_GUI/GUI/MemDev/GUIDEV.c
    uC_GUI/GUI/MemDev/GUIDEV_AA.c
    uC_GUI/GUI/MemDev/GUIDEV_Auto.c
    uC_GUI/GUI/MemDev/GUIDEV_Banding.c
    uC_GUI/GUI/MemDev/GUIDEV_Clear.c
    uC_GUI/GUI/MemDev/GUIDEV_CmpWithLCD.c
    uC_GUI/GUI/MemDev/GUIDEV_CopyFromLCD.c
    uC_GUI/GUI/MemDev/GUIDEV_GetYSize.c
    uC_GUI/GUI/MemDev/GUIDEV_Measure.c
    uC_GUI/GUI/MemDev/GUIDEV_ReduceYSize.c
    uC_GUI/GUI/MemDev/GUIDEV_SetOrg.c
    uC_GUI/GUI/MemDev/GUIDEV_Usage.c
    uC_GUI/GUI/MemDev/GUIDEV_UsageBM.c
    uC_GUI/GUI/Touch/GUI_HID.c
    uC_GUI/GUI/Touch/GUI_MOUSE_DriverPS2.c
    uC_GUI/GUI/Touch/GUI_TOUCH_DriverAnalog.c
    uC_GUI/GUI/Widget/button.c
    uC_GUI/GUI/Widget/button.h
    uC_GUI/GUI/Widget/Checkbox.c
    uC_GUI/GUI/Widget/Checkbox.h
    uC_GUI/GUI/Widget/Dialog.c
    uC_GUI/GUI/Widget/Dialog.h
    uC_GUI/GUI/Widget/Dialog_Intern.h
    uC_GUI/GUI/Widget/edit.c
    uC_GUI/GUI/Widget/Edit.h
    uC_GUI/GUI/Widget/Edit_Private.h
    uC_GUI/GUI/Widget/EditBin.c
    uC_GUI/GUI/Widget/EditDec.c
    uC_GUI/GUI/Widget/EditFloat.c
    uC_GUI/GUI/Widget/EditHex.c
    uC_GUI/GUI/Widget/framewin.c
    uC_GUI/GUI/Widget/FrameWin.h
    uC_GUI/GUI/Widget/GUI_EditBin.c
    uC_GUI/GUI/Widget/GUI_EditDec.c
    uC_GUI/GUI/Widget/GUI_EditFloat.c
    uC_GUI/GUI/Widget/GUI_EditHex.c
    uC_GUI/GUI/Widget/GUI_EditString.c
    uC_GUI/GUI/Widget/listbox.c
    uC_GUI/GUI/Widget/LISTBOX.h
    uC_GUI/GUI/Widget/marquee.c
    uC_GUI/GUI/Widget/Marquee.h
    uC_GUI/GUI/Widget/messagebox.c
    uC_GUI/GUI/Widget/progbar.c
    uC_GUI/GUI/Widget/ProgBar.h
    uC_GUI/GUI/Widget/Radio.c
    uC_GUI/GUI/Widget/Radio.h
    uC_GUI/GUI/Widget/Scrollbar.c
    uC_GUI/GUI/Widget/Scrollbar.h
    uC_GUI/GUI/Widget/Slider.c
    uC_GUI/GUI/Widget/Slider.h
    uC_GUI/GUI/Widget/Terminal.c
    uC_GUI/GUI/Widget/Terminal.h
    uC_GUI/GUI/Widget/Text.c
    uC_GUI/GUI/Widget/Text.h
    uC_GUI/GUI/Widget/Widget.c
    uC_GUI/GUI/Widget/Widget.h
    uC_GUI/GUI/Widget/Widget_3D.c
    uC_GUI/GUI/Widget/Widget_None.c
    uC_GUI/GUI/Widget/Widget_Simple.c
    uC_GUI/GUI/WM/wm.c
    uC_GUI/GUI/WM/WM.H
    uC_GUI/GUI/WM/WM__GetFirstSibling.c
    uC_GUI/GUI/WM/WM__GetHasFocus.c
    uC_GUI/GUI/WM/WM__GetLastSibling.c
    uC_GUI/GUI/WM/WM__GetPrevSibling.c
    uC_GUI/GUI/WM/WM__Screen2Client.c
    uC_GUI/GUI/WM/WM__SendMessage.c
    uC_GUI/GUI/WM/WM__SendMessageNoPara.c
    uC_GUI/GUI/WM/WM_BringToBottom.c
    uC_GUI/GUI/WM/WM_BringToTop.c
    uC_GUI/GUI/WM/WM_Broadcast.c
    uC_GUI/GUI/WM/WM_EnableWindow.c
    uC_GUI/GUI/WM/WM_GetBkColor.c
    uC_GUI/GUI/WM/WM_GetClientRect.c
    uC_GUI/GUI/WM/WM_GetClientWindow.c
    uC_GUI/GUI/WM/WM_GetDialogItem.c
    uC_GUI/GUI/WM/WM_GetFirstChild.c
    uC_GUI/GUI/WM/WM_GetFocussedChild.c
    uC_GUI/GUI/WM/WM_GetId.c
    uC_GUI/GUI/WM/WM_GetInsideRect.c
    uC_GUI/GUI/WM/WM_GetNextSibling.c
    uC_GUI/GUI/WM/WM_GetOrg.c
    uC_GUI/GUI/WM/WM_GetParent.c
    uC_GUI/GUI/WM/WM_GetScrollState.c
    uC_GUI/GUI/WM/WM_GetWindowRect.c
    uC_GUI/GUI/WM/WM_GetWindowSize.c
    uC_GUI/GUI/WM/WM_HasCaptured.c
    uC_GUI/GUI/WM/WM_Hide.c
    uC_GUI/GUI/WM/WM_Intern.h
    uC_GUI/GUI/WM/WM_IsWindow.c
    uC_GUI/GUI/WM/WM_Move.c
    uC_GUI/GUI/WM/WM_NotifyParent.c
    uC_GUI/GUI/WM/WM_OnKey.c
    uC_GUI/GUI/WM/WM_Paint.c
    uC_GUI/GUI/WM/WM_ResizeWindow.c
    uC_GUI/GUI/WM/WM_Screen2Win.c
    uC_GUI/GUI/WM/WM_SendToParent.c
    uC_GUI/GUI/WM/WM_SetCallback.c
    uC_GUI/GUI/WM/WM_SetCapture.c
    uC_GUI/GUI/WM/WM_SetCreateFlags.c
    uC_GUI/GUI/WM/WM_SetDesktopColor.c
    uC_GUI/GUI/WM/WM_SetFocus.c
    uC_GUI/GUI/WM/WM_SetFocusOnNextChild.c
    uC_GUI/GUI/WM/WM_SetScrollState.c
    uC_GUI/GUI/WM/WM_SetSize.c
    uC_GUI/GUI/WM/WM_SetTrans.c
    uC_GUI/GUI/WM/WM_SetUserClipRect.c
    uC_GUI/GUI/WM/WM_Validate.c
    uC_GUI/GUI/WM/WM_ValidateWindow.c
    uC_GUI/GUI/WM/WMMemDev.c
    uC_GUI/GUI/WM/WMTouch.c
    uC_GUI/GUIDemo/GUIDEMO.c
    uC_GUI/GUIDemo/GUIDEMO.H
    uC_GUI/GUIDemo/GUIDEMO_Automotive.c
    uC_GUI/GUIDemo/GUIDEMO_Bitmap.c
    uC_GUI/GUIDemo/GUIDEMO_Bitmap4bpp.c
    uC_GUI/GUIDemo/GUIDEMO_Circle.c
    uC_GUI/GUIDemo/GUIDEMO_ColorBar.c
    uC_GUI/GUIDemo/GUIDEMO_ColorList.c
    uC_GUI/GUIDemo/GUIDEMO_Dialog.c
    uC_GUI/GUIDemo/GUIDEMO_Font.c
    uC_GUI/GUIDemo/GUIDEMO_FrameWin.c
    uC_GUI/GUIDemo/GUIDEMO_Graph.c
    uC_GUI/GUIDemo/GUIDEMO_HardwareInfo.c
    uC_GUI/GUIDemo/GUIDEMO_Intro.c
    uC_GUI/GUIDemo/GUIDEMO_LUT.c
    uC_GUI/GUIDemo/GUIDEMO_MemDevB.c
    uC_GUI/GUIDemo/GUIDEMO_Messagebox.c
    uC_GUI/GUIDemo/GUIDEMO_Navi.c
    uC_GUI/GUIDemo/GUIDEMO_Polygon.c
    uC_GUI/GUIDemo/GUIDEMO_ProgBar.c
    uC_GUI/GUIDemo/GUIDEMO_Speed.c
    uC_GUI/GUIDemo/GUIDEMO_Touch.c
    uC_GUI/GUIDemo/Map.h
    uC_GUI/GUIDemo/MicriumLogo.c
    uC_GUI/GUIDemo/MicriumLogoWRed.c
    uC_GUI/GUI_X_uCOS.c
    uCOS_II/api/app_cfg.h
    uCOS_II/arm/OS_CPU.H
    uCOS_II/arm/Os_cpu_c.c
    uCOS_II/source/API/os_api.c
    uCOS_II/source/API/os_api.h
    uCOS_II/source/os_cfg.h
    uCOS_II/source/os_core.c
    uCOS_II/source/os_flag.c
    uCOS_II/source/os_mbox.c
    uCOS_II/source/os_mem.c
    uCOS_II/source/os_mutex.c
    uCOS_II/source/os_q.c
    uCOS_II/source/os_sem.c
    uCOS_II/source/os_task.c
    uCOS_II/source/os_time.c
    uCOS_II/source/os_tmr.c
    uCOS_II/source/ucos_ii.h)

add_executable(time_bomb ${SOURCE_FILES})